--- a/style.CSS
+++ b/style.CSS
@@ -50,7 +50,10 @@ nav a {
   #banner {
     margin: 20px;
   }
-  
+  #banner img {
+	max-width: 100%;
+	max-height: 100%;
+}
   /* Main Content Styles */
   
   #main-content {
